# whisper-flow-local-free

./: .gitignore  APPLE_SILICON_OPTIMIZATION.md  CLAUDE.md  README.md  build_app.sh  com.user.whisper-daemon.plist  compare_whisper_implementations.py  create_icon.py  install-daemon.sh  kb_analyze.py  kb_cap_capture.py  kb_cli.py  kb_transcribe.py  kb_volume_sync.py  pyproject.toml  requirements.txt  run_whisper_ui.sh  setup.py  test_cpu_optimization.py  test_postprocess.py  transcribe_file.py  transcribe_zoom.py  whisper-daemon.sh
.cursor/rules/: code-conventions.mdc  integration-points.mdc  project-architecture.mdc  task-documentation.mdc  ui-design-standards.mdc
_legacy/: README.md  main.py  run_whisper_ui.sh
_legacy/app/: core  prompts  utils
_legacy/ui/: enhancement_worker.py  main_window.py  meeting_worker.py  reenhance_dialog.py  settings_dialog.py  waveform_widget.py  workers.py  zoom_meeting_dialog.py
app/core/: audio_recorder.py  fabric_service.py  gemini_service.py  meeting_transcript.py  post_processor.py  streaming_transcriber.py  transcript_enhancer.py  transcript_sectioner.py  transcription_service.py  transcription_service_cpp.py  transcription_service_ext.py  video_extractor.py
app/daemon/: __init__.py  diff_view.py  hotkey_listener.py  recording_indicator.py  whisper_daemon.py
app/prompts/: image-identifier.md  separator.md
app/ui/: enhancement_worker.py  main_window.py  meeting_worker.py  (+5 more)
deploy/: deploy-kb-serve.sh  kb-serve.service
docs/: improvements.md  whisper-cpp-migration.md
kb/: __init__.py  __main__.py  analyze.py  capture.py  cli.py  config.py  core.py  dashboard.py  inbox.py  judge.py  migrate.py  prompts.py  publish.py  render.py  serve.py  serve_scanner.py  serve_state.py  serve_visual.py  transcribe.py  transcription.py  videos.py  volume_sync.py
mvp-example/: README.md  download-yt-transcribe.py  run_transcription.sh  stop_recording.sh  transcribe_pattern.py
resources/: app_icon.icns
scripts/: build_app.sh  install-daemon.sh  test_post_processor.py  toggle-whisper.sh  whisper-daemon.sh
tasks/: CLAUDE.md  global-task-manager.md  init-Project-Spec.md  main-template.md  smoke-test-t025-refactor.md
tests/: benchmark_paragraph.txt  benchmark_transcription.py  test_delegation_pip.py  test_delegation_tracker.py  test_delegation_wiring.py  test_pip_layout.py
(+178 files in other folders)
